# OpcUaRegler

./: .gitignore  AGENTS.md  CMakeLists.txt  PROGRESS.md  README.md  TODO.md
config/: regler.example.toml  regler.open62541.toml
docs/: architecture.md  euromap83-model.md  operations.md
include/opcuaregler/: alarm.hpp  config.hpp  controller.hpp  euromap83_model.hpp  opcua_backend.hpp  process_simulation.hpp
src/: alarm.cpp  config.cpp  controller.cpp  euromap83_model.cpp  main.cpp  opcua_memory_backend.cpp  opcua_open62541_backend.cpp  process_simulation.cpp
tests/: controller_tests.cpp
